support_tools/swigwin-3.0.12/Examples/test-suite/errors/cpp_inline_namespace.i
%module xxx

namespace foo {
%inline %{
int bar(int x) { }
%}
}
